src/az-cli/aks-app-routing-test/2.aksapprouting-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-app-routing-test-dep
  namespace: aks-app-routing-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-app-routing-test
  template:
    metadata:
      labels:
        app: aks-app-routing-test
    spec:
      containers:
      - name: aks-app-routing-test
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
