src/az-cli/aks-app-routing-test/3.aksapprouting-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-app-routing-test-svc
  namespace: aks-app-routing-test
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: aks-app-routing-test
