src/az-cli/aks-app-routing-test/5.aksapprouting-ing-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-app-routing-test-ing-tls
  namespace: aks-app-routing-test
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://kv-use2-446692-s4-aksfdp.vault.azure.net/certificates/aksfdpls-ebtests-ingress-tls/d33d696c8c9f4c9bb318b550c449323e
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  # ingressClassName: ing-approuting-public
  rules:
  - host: aksapprouting.akspls.ebtests
    http:
      paths:
      - backend:
          service:
            name: aks-app-routing-test-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - aksapprouting.akspls.ebtests
    secretName: keyvault-aks-app-routing-test-ing-tls
